2006-11-18 Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/server/ConnectedAdapter.cpp, src/services/server/ConnectedAdapter.h, src/services/server/IServerAdapter.h, src/services/server/NonConnectedAdapter.cpp, src/services/server/NonConnectedAdapter.h, src/services/server/ServerService.cpp, src/services/server/ServerService.h: added a delete command which will delete entities from the world

2006-11-18 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/Bootstrap.lua: added loading of the admin control

2006-11-18 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/Admin.layout, src/components/ogre/widgets/Admin.lua: added a widget to be shown when the user logs in as an admin

2006-11-18 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/TerrainEditor.lua: hide the overlay when the window is hidden

2006-11-18 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/scripting/bindings/lua/MovableObjectRenderer.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp: updated bindings

2006-11-18 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/ModelEdit.layout, src/components/ogre/widgets/ModelEdit.lua: added buttons for rotating the preview model in discrete steps, making it easier to better align it to the entity representation

2006-11-18 Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/buildings.material: updated materials
	* src/components/ogre/modeldefinitions/buildings.modeldef: updated model definitions

2006-11-18 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/MovableObjectRenderer.cpp, src/components/ogre/widgets/MovableObjectRenderer.h: expose the camera orientation methods, don't rotate the contained object by default

2006-11-18 Erik Hjortsberg  <erik@katastrof.nu>
